--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
         </dependency>
 
         <dependency>
-            <groupId>net.wesjd</groupId>
-            <artifactId>anvilgui</artifactId>
-            <version>1.4.0-SNAPSHOT</version>
+            <groupId>com.hakan</groupId>
+            <artifactId>HSignAPI</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
