--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.hakan-krgn</groupId>
-            <artifactId>HInventory</artifactId>
-            <version>1.0.5</version>
+            <groupId>com.hakan</groupId>
+            <artifactId>InventoryAPI</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
